deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hsk-service
spec:
  selector:
    app: hsk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
