deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hsk-ingress
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hsk-service
            port:
              number: 80
